--- a/dockerfile/images/mongo/4.2.12/Dockerfile
+++ b/dockerfile/images/mongo/4.2.12/Dockerfile
@@ -1,2 +1,2 @@
 FROM mongo:4.2.12
-ADD https://raw.githubusercontent.com/acexy/docker-workspaces/main/resource/os/centos/.bashrc /root/.bashrc
+ADD https://raw.githubusercontent.com/acexy/docker-workspaces/main/resource/os/ubuntu/bashrc /root/.bashrc
